--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -660,8 +660,8 @@ renaming, coverage information computing and metagenomic statistics
 calculations were performed using software tools from BBTools
 (\url{https://jgi.doe.gov/data-and-tools/bbtools}). Metagenomic
 sequences obtained in this study have been deposited in the European
-Nucleotide Archive (ENA) at EMBL-EBI under accession numbers \textbf{TO
-BE ADDED}.
+Nucleotide Archive (ENA) at EMBL-EBI under accession numbers
+SAMEA6648795, SAMEA6648797, SAMEA6648809 and SAMEA6648811.
 
 \hypertarget{protein-isolation}{%
 \subsubsection{Protein isolation}\label{protein-isolation}}
