--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -1,47 +1,33 @@
-% Options for packages loaded elsewhere
-\PassOptionsToPackage{unicode}{hyperref}
-\PassOptionsToPackage{hyphens}{url}
-%
-\documentclass[
-  12pt,
-]{article}
+\documentclass[12pt,]{article}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
+\usepackage{fixltx2e} % provides \textsubscript
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
-  \usepackage{textcomp} % provide euro and other symbols
-\else % if luatex or xetex
-  \usepackage{unicode-math}
-  \defaultfontfeatures{Scale=MatchLowercase}
-  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
+\else % if luatex or xelatex
+  \ifxetex
+    \usepackage{mathspec}
+  \else
+    \usepackage{fontspec}
+  \fi
+  \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
 \fi
-% Use upquote if available, for straight quotes in verbatim environments
+% use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
-\IfFileExists{microtype.sty}{% use microtype if available
-  \usepackage[]{microtype}
-  \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+% use microtype if available
+\IfFileExists{microtype.sty}{%
+\usepackage{microtype}
+\UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
-\makeatletter
-\@ifundefined{KOMAClassName}{% if non-KOMA class
-  \IfFileExists{parskip.sty}{%
-    \usepackage{parskip}
-  }{% else
-    \setlength{\parindent}{0pt}
-    \setlength{\parskip}{6pt plus 2pt minus 1pt}}
-}{% if KOMA class
-  \KOMAoptions{parskip=half}}
-\makeatother
-\usepackage{xcolor}
-\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
-\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
-\hypersetup{
-  pdftitle={Selective DNA and Protein Isolation from Marine Macrophyte Surfaces},
-  hidelinks,
-  pdfcreator={LaTeX via pandoc}}
-\urlstyle{same} % disable monospaced font for URLs
 \usepackage[margin=1.0in]{geometry}
+\usepackage{hyperref}
+\hypersetup{unicode=true,
+            pdftitle={Selective DNA and Protein Isolation from Marine Macrophyte Surfaces},
+            pdfborder={0 0 0},
+            breaklinks=true}
+\urlstyle{same}  % don't use monospace font for urls
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -51,14 +37,51 @@
 % margins by default, and it is still possible to overwrite the defaults
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
-% Set default figure placement to htbp
-\makeatletter
-\def\fps@figure{htbp}
-\makeatother
-\setlength{\emergencystretch}{3em} % prevent overfull lines
+\IfFileExists{parskip.sty}{%
+\usepackage{parskip}
+}{% else
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{6pt plus 2pt minus 1pt}
+}
+\setlength{\emergencystretch}{3em}  % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-\setcounter{secnumdepth}{-\maxdimen} % remove section numbering
+\setcounter{secnumdepth}{0}
+% Redefines (sub)paragraphs to behave more like sections
+\ifx\paragraph\undefined\else
+\let\oldparagraph\paragraph
+\renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+\fi
+\ifx\subparagraph\undefined\else
+\let\oldsubparagraph\subparagraph
+\renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+\fi
+
+%%% Use protect on footnotes to avoid problems with footnotes in titles
+\let\rmarkdownfootnote\footnote%
+\def\footnote{\protect\rmarkdownfootnote}
+
+%%% Change title format to be more compact
+\usepackage{titling}
+
+% Create subtitle command for use in maketitle
+\providecommand{\subtitle}[1]{
+  \posttitle{
+    \begin{center}\large#1\end{center}
+    }
+}
+
+\setlength{\droptitle}{-2em}
+
+  \title{\textbf{Selective DNA and Protein Isolation from Marine Macrophyte
+Surfaces}}
+    \pretitle{\vspace{\droptitle}\centering\huge}
+  \posttitle{\par}
+    \author{}
+    \preauthor{}\postauthor{}
+    \date{}
+    \predate{}\postdate{}
+  
 \usepackage{times} % Times New Roman font
 \usepackage[T1]{fontenc}
 
@@ -99,11 +122,6 @@
 \usepackage{txfonts}
 
 \renewcommand{\figureautorefname}{Fig.}
-
-\title{\textbf{Selective DNA and Protein Isolation from Marine Macrophyte
-Surfaces}}
-\author{}
-\date{\vspace{-2.5em}}
 
 \begin{document}
 \maketitle
@@ -263,22 +281,22 @@ protein) on the removal efficiency was observed (Figs.
 
 To evaluate if the obtained DNA is suitable to determine the microbial
 community structure an Illumina sequencing of the V4 16S rRNA region was
-performed. Sequencing yielded a total of 336,937 sequences after quality
+performed. Sequencing yielded a total of 336,944 sequences after quality
 curation and exclusion of eukaryotic, mitochondrial and no relative
-sequences. The number of sequences classified as chloroplast was 97,328.
+sequences. The number of sequences classified as chloroplast was 97,334.
 After excluding these sequences the total number of retrieved reads
-dropped to 239,609, ranging from 22,587 to 52,958 sequences per sample
+dropped to 239,610, ranging from 22,596 to 52,930 sequences per sample
 (\autoref{supp-nseq_notus}). Even when the highest sequencing effort was
 applied the rarefaction curves did not level off which is commonly
 observed in high-throughput 16S rRNA amplicon sequencing procedures
 (\autoref{supp-rarefaction}). Sequence clustering at a similarity level
-of 97 \si{\percent} yielded a total of 8,360 different OTUs. Taxonomic
+of 97 \si{\percent} yielded a total of 8,355 different OTUs. Taxonomic
 classification of reads allowed for a macrophyte associated epiphytic
 community determination that was mainly composed of:
 \emph{Alphaproteobacteria} (14.9 ± 3.5 \si{\percent}),
 \emph{Bacteroidota} (12.5 ± 2.4 \si{\percent}),
 \emph{Gammaproteobacteria} (11.6 ± 4.3 \si{\percent}),
-\emph{Desulfobacterota} (7.8 ± 7.4 \si{\percent}), \emph{Cyanobacteria}
+\emph{Desulfobacterota} (7.8 ± 7.5 \si{\percent}), \emph{Cyanobacteria}
 (6.5 ± 4.7 \si{\percent}) and \emph{Planctomycetota} (2.9 ± 1.7
 \si{\percent}) (\autoref{community}).
 
@@ -733,7 +751,7 @@ other packages (Xie, 2014, 2015, 2019, 2020; Neuwirth, 2014; Xie
 \emph{et al.}, 2018; Wilke, 2018; Allaire \emph{et al.}, 2019; Zhu,
 2019; Bengtsson, 2020). The detailed analysis procedure including the R
 Markdown file for this paper are available as a GitHub repository
-(\url{https://github.com/mkorlevic/Korlevic_SelectiveRemoval_EnvironMicrobiol_2020}).
+(\url{https://github.com/MicrobesRovinj/Korlevic_SelectiveRemoval_EnvironMicrobiol_2020}).
 
 \hypertarget{confocal-microscopy}{%
 \subsubsection{Confocal microscopy}\label{confocal-microscopy}}
@@ -1173,5 +1191,6 @@ syntax.
 
 \caption{Relative contribution of each COG category to the total number of annotated coding sequences (A) from metagenomes and identified proteins (B) from metaproteomes associated with surfaces of two marine macrophytes (\textit{C. nodosa} and \textit{C. cylindracea}) sampled in the Bay of Saline and the Bay of Funtana (Mixed and Monospecific Settlements) and in two contrasting seasons (4/14 December 2017 and 19 June 2018). Total number of annotated coding sequences and identified proteins is given above the corresponding bar.\label{cog}}\label{fig:unnamed-chunk-5}
 \end{figure}
+
 
 \end{document}
