Coauthors review done.

--- a/submission/references.bib
+++ b/submission/references.bib
@@ -3,8 +3,7 @@
   title = {{{rmarkdown}}: Dynamic Documents for {{R}}},
   author = {Allaire, J J and Xie, Yihui and McPherson, Jonathan and Luraschi, Javier and Ushey, Kevin and Atkins, Aron and Wickham, Hadley and Cheng, Joe and Chang, Winston and Iannone, Richard},
   date = {2019},
-  url = {https://github.com/rstudio/rmarkdown},
-  annotation = {Programmers: \_:n128}
+  url = {https://github.com/rstudio/rmarkdown}
 }
 
 @article{Amann1995,
@@ -16,8 +15,6 @@
   pages = {143--169},
   issn = {0146-0749},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/7535888 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC239358},
-  eprint = {7535888},
-  eprinttype = {pmid},
   issue = {1},
   number = {1}
 }
@@ -31,8 +28,6 @@
   pages = {171--181},
   doi = {10.1038/ismej.2009.108},
   url = {http://www.nature.com/articles/ismej2009108},
-  eprint = {19829318},
-  eprinttype = {pmid},
   issue = {2},
   number = {2}
 }
@@ -55,8 +50,7 @@
   title = {{{matrixStats}}: Functions That Apply to Rows and Columns of Matrices (and to Vectors)},
   author = {Bengtsson, Henrik},
   date = {2020},
-  url = {https://CRAN.R-project.org/package=matrixStats},
-  annotation = {Programmers: \_:n7399}
+  url = {https://CRAN.R-project.org/package=matrixStats}
 }
 
 @article{Buchfink2015,
@@ -71,7 +65,6 @@
   doi = {10.1038/nmeth.3176},
   url = {https://www.nature.com/articles/nmeth.3176},
   urldate = {2020-07-08},
-  file = {/home/marino/Zotero/storage/I3XJXIXK/nmeth.html},
   issue = {1},
   langid = {english},
   number = {1}
@@ -86,8 +79,6 @@
   pages = {252--256},
   doi = {10.1128/AEM.01630-08},
   url = {http://aem.asm.org/cgi/doi/10.1128/AEM.01630-08},
-  eprint = {18978081},
-  eprinttype = {pmid},
   issue = {1},
   number = {1}
 }
@@ -117,8 +108,6 @@
   issn = {1751-7370},
   doi = {10.1038/ismej.2010.164},
   url = {http://www.nature.com/articles/ismej2010164 http://www.ncbi.nlm.nih.gov/pubmed/21048801 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3105733},
-  eprint = {21048801},
-  eprinttype = {pmid},
   issue = {4},
   number = {4}
 }
@@ -132,8 +121,6 @@
   pages = {758--761},
   doi = {10.1002/jobm.201300041},
   url = {http://doi.wiley.com/10.1002/jobm.201300041},
-  eprint = {23696300},
-  eprinttype = {pmid},
   issue = {7},
   number = {7}
 }
@@ -148,8 +135,6 @@
   issn = {1751-7362},
   doi = {10.1038/ismej.2012.8},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/22402401 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3400413 http://www.nature.com/articles/ismej20128},
-  eprint = {22402401},
-  eprinttype = {pmid},
   issue = {8},
   number = {8}
 }
@@ -180,8 +165,6 @@
   doi = {10.1093/nar/gkt1244},
   url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3965039/},
   urldate = {2020-04-15},
-  eprint = {24288368},
-  eprinttype = {pmid},
   issue = {Database issue},
   number = {Database issue},
   pmcid = {PMC3965039}
@@ -200,7 +183,6 @@
   doi = {10.3389/fpls.2015.00287},
   url = {https://www.frontiersin.org/articles/10.3389/fpls.2015.00287/full},
   urldate = {2020-09-04},
-  file = {/home/marino/Zotero/storage/ETHD4P8V/Coneva and Chitwood - 2015 - Plant architecture without multicellularity quand.pdf},
   keywords = {Coenocyte,green algae,morphology,multicellularity,patterning,small RNAs,transcript accumulation},
   langid = {english}
 }
@@ -232,7 +214,6 @@
   doi = {10.3389/fmars.2018.00171},
   url = {https://www.frontiersin.org/articles/10.3389/fmars.2018.00171/full},
   urldate = {2020-09-11},
-  file = {/home/marino/Zotero/storage/RD2SU82N/Cúcio et al. - 2018 - Metagenomic Analysis Shows the Presence of Bacteri.pdf},
   keywords = {Chemolithoautotrophs,Metagenomics,Plant-Microbe Interactions,rhizobiome,seagrass microbiome,sulfur bacteria,symbionts},
   langid = {english}
 }
@@ -246,8 +227,6 @@
   pages = {462--476},
   doi = {10.1111/1574-6976.12011},
   url = {https://academic.oup.com/femsre/article-lookup/doi/10.1111/1574-6976.12011},
-  eprint = {23157386},
-  eprinttype = {pmid},
   issue = {3},
   number = {3}
 }
@@ -262,8 +241,6 @@
   issn = {14622912},
   doi = {10.1111/j.1462-2920.2009.02017.x},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/19659500 http://doi.wiley.com/10.1111/j.1462-2920.2009.02017.x},
-  eprint = {19659500},
-  eprinttype = {pmid},
   issue = {12},
   number = {12}
 }
@@ -292,9 +269,6 @@
   pages = {2115--2122},
   issn = {1537-1719},
   doi = {10.1093/molbev/msx148},
-  eprint = {28460117},
-  eprinttype = {pmid},
-  file = {/home/marino/Zotero/storage/VNC6CZR8/Huerta-Cepas et al. - 2017 - Fast Genome-Wide Functional Annotation through Ort.pdf},
   keywords = {Algorithms,comparative genomics,Computer Simulation,Databases; Genetic,Databases; Protein,functional annotation,gene function,Gene Ontology,Genome,genomics,metagenomics,orthology,Phylogeny,Sequence Alignment,Sequence Analysis; Protein,Software},
   langid = {english},
   number = {8},
@@ -315,7 +289,6 @@
   doi = {10.1093/nar/gky1085},
   url = {https://academic.oup.com/nar/article/47/D1/D309/5173662},
   urldate = {2020-07-08},
-  file = {/home/marino/Zotero/storage/G8HXSNGW/Huerta-Cepas et al. - 2019 - eggNOG 5.0 a hierarchical, functionally and phylo.pdf;/home/marino/Zotero/storage/UVETDQVJ/5173662.html},
   langid = {english},
   number = {D1},
   options = {useprefix=true}
@@ -330,8 +303,6 @@
   pages = {208--212},
   doi = {10.1038/nature14238},
   url = {http://www.nature.com/articles/nature14238},
-  eprint = {25739499},
-  eprinttype = {pmid},
   issue = {7551},
   number = {7551}
 }
@@ -348,7 +319,6 @@
   doi = {10.1186/1471-2105-11-119},
   url = {https://doi.org/10.1186/1471-2105-11-119},
   urldate = {2020-07-08},
-  file = {/home/marino/Zotero/storage/YR8CVGLT/Hyatt et al. - 2010 - Prodigal prokaryotic gene recognition and transla.pdf;/home/marino/Zotero/storage/3S4QE4MS/1471-2105-11-119.html},
   number = {1}
 }
 
@@ -362,8 +332,6 @@
   issn = {1573-3017},
   doi = {10.1007/s10646-015-1511-z},
   url = {http://link.springer.com/10.1007/s10646-015-1511-z http://www.ncbi.nlm.nih.gov/pubmed/26092035},
-  eprint = {26092035},
-  eprinttype = {pmid},
   issue = {7-8},
   keywords = {Cyanobacteria,Microbial communities,South China Sea,Thalassia hemprichii,Xincun Bay,α-Proteobacteria},
   number = {7-8}
@@ -379,8 +347,6 @@
   issn = {07232020},
   doi = {10.1016/j.syapm.2016.06.006},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/27475818 http://linkinghub.elsevier.com/retrieve/pii/S0723202016300510},
-  eprint = {27475818},
-  eprinttype = {pmid},
   issue = {6},
   keywords = {16S amplicon,CARD FISH,Diversity,Estuaries,Gradient,Phytoplankton bloom},
   number = {6}
@@ -395,8 +361,6 @@
   pages = {5112--5120},
   doi = {10.1128/AEM.01043-13},
   url = {http://aem.asm.org/lookup/doi/10.1128/AEM.01043-13},
-  eprint = {23793624},
-  eprinttype = {pmid},
   issue = {17},
   number = {17}
 }
@@ -423,7 +387,6 @@
   pages = {23--32},
   url = {https://www.researchgate.net/publication/312611101_Complete_chloroplast_genome_for_Caulerpa_racemosa_Bryopsidales_Chlorophyta_and_comparative_analyses_of_siphonous_green_seaweed_plastomes},
   urldate = {2020-09-09},
-  file = {/home/marino/Zotero/storage/EDDYXMRY/312611101_Complete_chloroplast_genome_for_Caulerpa_racemosa_Bryopsidales_Chlorophyta_and_compar.html},
   langid = {english},
   number = {2}
 }
@@ -440,10 +403,6 @@
   doi = {10.1080/08927014.2014.977267},
   url = {https://doi.org/10.1080/08927014.2014.977267},
   urldate = {2020-09-11},
-  annotation = {\_eprint: https://doi.org/10.1080/08927014.2014.977267},
-  eprint = {25407927},
-  eprinttype = {pmid},
-  file = {/home/marino/Zotero/storage/ZKA5AQTE/Leary et al. - 2014 - Integrated metagenomic and metaproteomic analyses .pdf;/home/marino/Zotero/storage/Z5KQLXNB/08927014.2014.html},
   keywords = {biofouling,diatoms,metagenome,metaproteome,quantitative proteomics,ship hull},
   number = {10}
 }
@@ -460,7 +419,6 @@
   doi = {10.1093/bioinformatics/btp324},
   url = {https://academic.oup.com/bioinformatics/article/25/14/1754/225615},
   urldate = {2020-07-08},
-  file = {/home/marino/Zotero/storage/3HV7JHHG/Li and Durbin - 2009 - Fast and accurate short read alignment with Burrow.pdf;/home/marino/Zotero/storage/K3VN8PB9/225615.html},
   langid = {english},
   number = {14}
 }
@@ -478,7 +436,6 @@
   doi = {10.1093/bioinformatics/btv033},
   url = {https://academic.oup.com/bioinformatics/article/31/10/1674/177884},
   urldate = {2020-07-08},
-  file = {/home/marino/Zotero/storage/EU3RLL24/Li et al. - 2015 - MEGAHIT an ultra-fast single-node solution for la.pdf;/home/marino/Zotero/storage/6RNRWSWC/177884.html},
   langid = {english},
   number = {10}
 }
@@ -506,8 +463,6 @@
   journaltitle = {Appl. Environ. Microbiol.},
   volume = {63},
   pages = {50--56},
-  eprint = {8979338},
-  eprinttype = {pmid},
   issue = {1},
   number = {1}
 }
@@ -555,7 +510,6 @@
   doi = {10.5194/bg-17-3299-2020},
   url = {https://bg.copernicus.org/articles/17/3299/2020/},
   urldate = {2020-09-04},
-  file = {/home/marino/Zotero/storage/4429CKNN/Najdek et al. - 2020 - Dynamics of environmental conditions during the de.pdf;/home/marino/Zotero/storage/TZPLKLTQ/bg-17-3299-2020-discussion.html},
   langid = {english},
   number = {12}
 }
@@ -564,8 +518,7 @@
   title = {{{RColorBrewer}}: {{ColorBrewer}} Palettes},
   author = {Neuwirth, Erich},
   date = {2014},
-  url = {https://cran.r-project.org/package=RColorBrewer},
-  annotation = {Programmers: \_:n236}
+  url = {https://cran.r-project.org/package=RColorBrewer}
 }
 
 @article{Noges2010,
@@ -593,8 +546,6 @@
   issn = {14622912},
   doi = {10.1111/1462-2920.13023},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/26271760 http://doi.wiley.com/10.1111/1462-2920.13023},
-  eprint = {26271760},
-  eprinttype = {pmid},
   issue = {5},
   number = {5}
 }
@@ -609,8 +560,6 @@
   issn = {1362-4962},
   doi = {10.1093/nar/gks1219},
   url = {http://academic.oup.com/nar/article/41/D1/D590/1069277/The-SILVA-ribosomal-RNA-gene-database-project http://www.ncbi.nlm.nih.gov/pubmed/23193283 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3531112},
-  eprint = {23193283},
-  eprinttype = {pmid},
   issue = {Database issue},
   number = {Database issue}
 }
@@ -621,7 +570,6 @@
   date = {2019},
   location = {{Vienna, Austria}},
   url = {https://www.r-project.org/},
-  annotation = {Programmers: \_:n460},
   organization = {{R Foundation for Statistical Computing}}
 }
 
@@ -665,7 +613,6 @@
   doi = {10.1021/acs.jproteome.8b00761},
   url = {https://doi.org/10.1021/acs.jproteome.8b00761},
   urldate = {2020-09-11},
-  file = {/home/marino/Zotero/storage/WRWQ28SE/Saito et al. - 2019 - Progress and Challenges in Ocean Metaproteomics an.pdf;/home/marino/Zotero/storage/RGQ5KYPK/acs.jproteome.html},
   number = {4}
 }
 
@@ -678,8 +625,6 @@
   pages = {7537--7541},
   doi = {10.1128/AEM.01541-09},
   url = {http://aem.asm.org/cgi/doi/10.1128/AEM.01541-09},
-  eprint = {19801464},
-  eprinttype = {pmid},
   issue = {23},
   number = {23}
 }
@@ -694,8 +639,6 @@
   issn = {2167-8359},
   doi = {10.7717/peerj.1869},
   url = {https://peerj.com/articles/1869 http://www.ncbi.nlm.nih.gov/pubmed/27069806 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4824876},
-  eprint = {27069806},
-  eprinttype = {pmid},
   keywords = {16S rRNA gene sequencing,Bioinformatics,Microbial ecology,Microbiome,Next generation sequencing,PacBio,Sequencing error}
 }
 
@@ -708,8 +651,6 @@
   pages = {e00201--16},
   doi = {10.1128/mBio.00201-16},
   url = {http://mbio.asm.org/lookup/doi/10.1128/mBio.00201-16},
-  eprint = {27190214},
-  eprinttype = {pmid},
   issue = {3},
   number = {3}
 }
@@ -724,8 +665,6 @@
   issn = {01686496},
   doi = {10.1111/j.1574-6941.2008.00445.x},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/18328081 https://academic.oup.com/femsec/article-lookup/doi/10.1111/j.1574-6941.2008.00445.x},
-  eprint = {18328081},
-  eprinttype = {pmid},
   issue = {1},
   number = {1}
 }
@@ -740,8 +679,6 @@
   issn = {1432-0614},
   doi = {10.1007/s00253-011-3800-7},
   url = {http://link.springer.com/10.1007/s00253-011-3800-7 http://www.ncbi.nlm.nih.gov/pubmed/22189863},
-  eprint = {22189863},
-  eprinttype = {pmid},
   issue = {3},
   number = {3}
 }
@@ -784,8 +721,6 @@
   volume = {62},
   pages = {766--771},
   publisher = {{American Society for Microbiology (ASM)}},
-  eprint = {8975607},
-  eprinttype = {pmid},
   issue = {3},
   number = {3}
 }
@@ -819,8 +754,6 @@
   issn = {1751-7362},
   doi = {10.1038/ismej.2012.28},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/22534610 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3446797 http://www.nature.com/articles/ismej201228},
-  eprint = {22534610},
-  eprinttype = {pmid},
   issue = {10},
   number = {10}
 }
@@ -835,8 +768,6 @@
   issn = {1548-7091},
   doi = {10.1038/nmeth.1322},
   url = {http://www.ncbi.nlm.nih.gov/pubmed/19377485 http://www.nature.com/articles/nmeth.1322},
-  eprint = {19377485},
-  eprinttype = {pmid},
   issue = {5},
   number = {5}
 }
@@ -889,8 +820,7 @@
   title = {{{tinytex}}: Helper Functions to Install and Maintain '{{TeX Live}}', and Compile '{{LaTeX}}' Documents},
   author = {Xie, Yihui},
   date = {2020},
-  url = {https://github.com/yihui/tinytex},
-  annotation = {Programmers: \_:n149}
+  url = {https://github.com/yihui/tinytex}
 }
 
 @article{Yilmaz2014,
@@ -903,8 +833,6 @@
   issn = {1362-4962},
   doi = {10.1093/nar/gkt1209},
   url = {https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkt1209 http://www.ncbi.nlm.nih.gov/pubmed/24293649 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3965112},
-  eprint = {24293649},
-  eprinttype = {pmid},
   issue = {D1},
   number = {D1}
 }
@@ -913,8 +841,7 @@
   title = {{{kableExtra}}: Construct Complex Table with 'kable' and Pipe Syntax},
   author = {Zhu, Hao},
   date = {2019},
-  url = {https://cran.r-project.org/package=kableExtra},
-  annotation = {Programmers: \_:n392}
+  url = {https://cran.r-project.org/package=kableExtra}
 }
 
 
