--- a/submission/supplementary.tex
+++ b/submission/supplementary.tex
@@ -143,7 +143,7 @@ Surfaces}}
 
 Marino Korlević\textsuperscript{1\(*\)}, Marsej
 Markovski\textsuperscript{1}, Zihao Zhao\textsuperscript{2}, Gerhard J.
-Herndl\textsuperscript{2,3}, Mirjana Najdek\textsuperscript{1}
+Herndl\textsuperscript{2,3,4}, Mirjana Najdek\textsuperscript{1}
 
 1. Center for Marine Research, Ruđer Bošković Institute, Croatia
 
@@ -153,6 +153,8 @@ Vienna, Austria
 3. NIOZ, Department of Marine Microbiology and Biogeochemistry, Royal
 Netherlands Institute for Sea Research, Utrecht University, The
 Netherlands
+
+4. Vienna Metabolomics Center, University of Vienna, Austria
 
 \textsuperscript{\(*\)}To whom correspondence should be addressed:
 
@@ -169,7 +171,6 @@ e-mail:
 
 Running title: DNA and protein isolation from macrophyte surfaces
 
-\linenumbers
 \sisetup{mode=text}
 \setlength\parindent{24pt}
 
@@ -182,7 +183,7 @@ Running title: DNA and protein isolation from macrophyte surfaces
 
 }
 
-\caption{Rarefaction curves of bacterial and archaeal communities from the surfaces of two marine macrophytes (\textit{C. nodosa} and \textit{C. cylindracea}) sampled in the Bay of Saline and the Bay of Funtana (Mixed and Monospecific Settlements) in two contrasting seasons (4 December 2017 and 19 June 2018).\label{rarefaction}}\label{fig:unnamed-chunk-1}
+\caption{Rarefaction curves of bacterial and archaeal communities from the surfaces of two marine macrophytes (\textit{C. nodosa} and \textit{C. cylindracea}) sampled in the Bay of Saline and the Bay of Funtana (mixed and monospecific settlements) in two contrasting seasons (4 December 2017 and 19 June 2018).\label{rarefaction}}\label{fig:unnamed-chunk-1}
 \end{figure}
 
 \newpage
